--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
             document.getElementById('login-btn').addEventListener('click', () => {
                 setTimeout(() => {
                     // Redirect to dashboard after successful login
-                    window.location.href = 'index.html';
+                    window.location.href = 'Login.html';
                 }, );
             });
 
